[metadata]
name = cymr
version = 0.11.2
url = https://github.com/mortonne/cymr
author = Neal Morton
author_email = mortonne@gmail.com
description = CyMR: Computational modeling of free recall data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = psychology, memory, modeling, CMR
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    scipy
    pandas
    cython
    joblib
    h5py>=3.0
    matplotlib
    psifr
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
cymr = data/*.csv

[options.extras_require]
docs = sphinx; pydata-sphinx-theme; ipython
test = pytest; codecov; pytest-cov
